--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -5,6 +5,7 @@
     "url_2": "Contact"
     },
     "title": "Earn up to",
+    "percent": "50%",
     "subtitle_1": "Comission",
     "subtitle_2": "Convert your traffic to revenue",
     "about": {
