--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -43,7 +43,7 @@
     "text_3": "every month for successful referrals"
   },
   "program": {
-    "text_1": "We developed a platform by using our experience and the best practices in sports business to create an extraordinary sports funding model. Atheltes, Clubs and Supporters to participate bellow:",
+    "text_1": "The first blockchain sports exchange where you fans trade and support their favorite clubs and sports idols",
     "text_2": "Athletes can tokenize any types of right and share their success with fans and followers. It is possible to tokenize every",
     "text_3": "Sports clubs or associations can tokenize any types of right to make their business closer to their fans and followers. It is possible to tokenize every future income.",
     "text_4": "Globatalent revolutionizes the sports industry allowing fans and supporters from all over the world to be part of sports business, an industry valued at USD 1.5 billion",
